--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										After six years, I switched to Java and joined a newly-created development team to build a new claims handling system. 
 										I stayed with the team maintaining and supporting several claims applications until 2018 
 										when I moved to a new team as a developer supporting an online broker portal, developed in Mendix. 
-										After twenty years at the same company, I left to start a career break at the beginning of 2019.
+										At the beginning of 2019, after twenty years at the company, I had the opportunity to take a career break to take care of my family.
 									</p>
 								</div>
 							</section>
@@ -88,12 +88,12 @@
 									I have  reviewed code and database scripts, planned and managed monthly application releases and created technical documentation, such as coding standards and technical specifications.
 								</p>
 								<ul class="feature-icons">
-									<li class="icon solid fa-code">Java, JPA, XML, HTML, CSS</li>
-									<li class="icon solid fa-database">Oracle, MS SQL Server</li>
+									<li class="icon solid fa-code">Java, JPA, HTML, CSS, XML, JSON</li>
+									<li class="icon solid fa-database">Oracle, MS SQL Server, MySQL</li>
 									<li class="icon solid fa-server">WebSphere, Weblogic</li>
-									<li class="icon solid fa-cogs">JUnit, Maven, Jenkins, Subversion</li>
-									<li class="icon solid fa-desktop">Eclipse, IntelliJ, PL/SQL Developer</li>
-									<li class="icon solid fa-university">Now learning front-end development!</li>
+									<li class="icon solid fa-cogs">JUnit, Maven, Jenkins, Git, Subversion</li>
+									<li class="icon solid fa-desktop">IntelliJ, VS Code, Eclipse, PL/SQL Developer</li>
+									<li class="icon solid fa-university">New Skills! JavaScript, React, Serverless Framework, AWS</li>
 								</ul>
 							</div>
 						</section>
@@ -130,10 +130,13 @@
 								<h3>Why I Want To Return To Tech</h3>
 								<p>I have always enjoyed learning and coding, but I have missed developing applications and working in a team since leaving my last role. 
 									During my career break, I have been studying part-time and keeping up-to-date with software development. 
-									From September, I will have more time to focus back onto my career.
+									In September I joined the Tech Returners "Your Return To Tech" programme to learn React and AWS cloud services, and develop a "Tech For Good" project over eight weeks.
 									<br>
-									I feel that my experience, combined with the coaching and technical training of the "Your Return To Tech" programme, 
-									will ensure I am an asset to my future employers when I return to my career in technology.
+									The project, <a href="https://github.com/tr-hack-to-the-future">Pretty Please,</a> is a React web application connected to an AWS RDS database via Java AWS lambda functions.
+									<br>
+									My experience for the Tech Returners programme has renewed my passion for software development and team working. 
+									I have been able to learn new skills and combine them with my existing skills to help ensure that I am an asset to my 
+									future employers when I return to my career in development.
 								</p>
 <!-- 								
 								<div class="features">
