add linkedin ref

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin" aria-hidden="true"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mark-lieberman/" class="icon brands fa-linkedin" aria-hidden="true"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/M-Lieberman" class="icon brands fa-github" aria-hidden="true"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
