add Interests section

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Summary</a></li>
-						<li><a href="#two">Career History</a></li>
-						<li><a href="#three">Technical Skills</a></li>
-						<li><a href="#four">Transferable Skills</a></li>
-						<li><a href="#five">Why I Want To Return To Tech</a></li>
+						<li><a href="#summary" class="active">Summary</a></li>
+						<li><a href="#career">Career History</a></li>
+						<li><a href="#technical">Technical Skills</a></li>
+						<li><a href="#transferable">Transferable Skills</a></li>
+						<li><a href="#whyreturn">Why I Want To Return To Tech</a></li>
+						<li><a href="#personal">Interests</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -44,8 +45,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							<section id="one">
+						<!-- summary -->
+							<section id="summary">
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -60,8 +61,8 @@
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two">
+						<!-- Career History -->
+							<section id="career">
 								<div class="container">
 									<h3>Career History</h3>
 									<p>My career began as a SAS programmer supporting a data entry system for a Clinical Research Organisation, 
@@ -75,8 +76,8 @@
 								</div>
 							</section>
 
-							<!-- Three -->
-						<section id="three">
+							<!-- Technical Skills -->
+						<section id="technical">
 							<div class="container">
 								<h3>Technical Skills</h3>
 								<p>
@@ -99,8 +100,8 @@
 						</section>
 
 
-						<!-- Four -->
-						<section id="four">
+						<!-- Transferable Skills -->
+						<section id="transferable">
 							<div class="container">
 								<h3>Transferable Skills</h3>
 								<p>I have experience in solving complex problems, both on my own and working with others. 
@@ -124,46 +125,59 @@
 						</section>
 
 
-						<!-- Five -->
-						<section id="five">
+						<!-- Why I Want To Return To Tech -->
+						<section id="whyreturn">
 							<div class="container">
 								<h3>Why I Want To Return To Tech</h3>
 								<p>I have always enjoyed learning and coding, but I have missed developing applications and working in a team since leaving my last role. 
 									During my career break, I have been studying part-time and keeping up-to-date with software development. 
 									From September, I will have more time to focus back onto my career.
 									<br>
-									I feel that my experience, combined with the coaching and technical training of the "Your Return To Tech" programme, 
+									I feel that my experience and transferable skills, combined with the training and opportunities of the "Your Return To Tech" programme, 
 									will ensure I am an asset to my future employers when I return to my career in technology.
 								</p>
-<!-- 								
+							</div>
+						</section>
+						<!-- Personal -->
+						<section id="personal">
+							<div class="container">
+								<h3>Interests</h3>
+
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/food.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>I Love Coding</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>Food, Glorious Food</h4>
+											<p>When I'm not thinking about coding, I'm usually thinking about food. What to eat next, what to cook, what restaurant to visit next. 
+												This love for food began after I bought an old copy of the Good Food Guide for 50p from my local library and ultimately led to me getting married in a restaurant.  Now every holiday and day trip is centred around what good food there is to eat. </p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/library.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Collaboration</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>Books, Books, Books</h4>
+											<p>Reading has been a big part of my life. Fiction-wise, I'm a big fan of early Paul Auster, and my current favourite is Elizabeth Strout. 
+												<br/>
+												Aside from cookbooks, I have an interest in productivity and psychology, especially in the area of habits and mindset. 
+												In this area, I found The Checklist Manifesto by Atul Gawande to be a great book about how to improve processes, especially when working in a high-stakes environment. 
+											</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/towerbridge2.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Crteating Great Things</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>London</h4>
+											<p>I'm a city person and love living in London. Before lockdown, I enjoyed spending time walking around, visiting galleries and museums (and the occasional restaurant). Hong Kong, Tokyo and Sydney are all amazing cities, but London is the best!</p>
 										</div>
 									</article>
 								</div>
 							</div>
 						</section>
- -->
+ 						
+ 
+</div>
 						<!-- Five -->
-						<!--
+<!-- 						
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -492,14 +506,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</section>
 						-->
+					</div> 
 
-					</div>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Mark Lieberman. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Mark Lieberman.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
