--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li><a href="#technical">Technical Skills</a></li>
 						<li><a href="#transferable">Transferable Skills</a></li>
 						<li><a href="#whyreturn">Why I Want To Return To Tech</a></li>
-						<li><a href="#personal">Interests</a></li>
+						<li><a href="#interests">Interests</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -139,7 +139,7 @@
 							</div>
 						</section>
 						<!-- Personal -->
-						<section id="personal">
+						<section id="interests">
 							<div class="container">
 								<h3>Interests</h3>
 
