technical skills text change

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<li class="icon solid fa-server">WebSphere, Weblogic</li>
 									<li class="icon solid fa-cogs">JUnit, Maven, Jenkins, Subversion</li>
 									<li class="icon solid fa-desktop">Eclipse, IntelliJ, PL/SQL Developer</li>
-									<li class="icon solid fa-university">Now learning front-end development!</li>
+									<li class="icon solid fa-university">Now learning JavaScript and React!</li>
 								</ul>
 							</div>
 						</section>
